--- a/jslib/package.json
+++ b/jslib/package.json
@@ -4,7 +4,7 @@
   "description": "Data Browser library",
   "main": "index.js",
   "scripts": {
-    "build": "rm -f ../app/web/lib/sand.min.js && rollup -f umd -n sand -o ../app/web/lib/sand.js -- index.js && minify ../app/web/lib/sand.js > ../app/web/lib/sand.min.js && rm -f ../app/web/lib/sand.js"
+    "build": "rm -f ../app/web/lib/sand.min.js && ./node_modules/.bin/rollup -c && minify ../app/web/lib/sand.js > ../app/web/lib/sand.min.js && rm -f ../app/web/lib/sand.js"
   },
   "keywords": [],
   "author": "zhuxp",
@@ -13,6 +13,7 @@
     "@nbrowser/nb-chan": "0.0.2"
   },
   "devDependencies": {
-    "rollup": "0.36"
+    "rollup": "^1.10.0",
+    "rollup-plugin-node-resolve": "^4.2.3"
   }
 }
