--- a/jslib/package.json
+++ b/jslib/package.json
@@ -1,19 +1,18 @@
 {
   "name": "sand",
-  "version": "0.0.1",
+  "version": "0.7.0",
   "description": "Data Browser library",
   "main": "index.js",
   "scripts": {
-    "build": "rm -f ../app/web/lib/sand.min.js && ./node_modules/.bin/rollup -c && minify ../app/web/lib/sand.js > ../app/web/lib/sand.min.js && rm -f ../app/web/lib/sand.js"
+    "build": "rm -f ../app/web/lib/sand.min.js && webpack -c"
   },
   "keywords": [],
   "author": "zhuxp",
   "license": "GPL",
   "dependencies": {
-    "@nbrowser/nb-chan": "0.0.2"
+    "@nbrowser/nb-chan": "0.0.2",
+    "@nucleome/nb-dispatch": "0.0.2",
+    "golden-layout": "^1.5.9"
   },
-  "devDependencies": {
-    "rollup": "^1.10.0",
-    "rollup-plugin-node-resolve": "^4.2.3"
-  }
+  "devDependencies": {}
 }
